[package]
name = "wasm_demo_contour"
version = "0.2.0"
authors = ["Matthieu Viry <matthieu.viry@univ-grenoble-alpes.fr>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
colorbrewer = "0.2"
geojson = "0.24"
contour = "0.6.0"
console_error_panic_hook = { version = "0.1.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
